Template updated, animals normal map updated, player's buttons fixed, kangaroo material fixed.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
           <div id="flag8" style="position: absolute; top: 0%; left: 85%; width: 6%; height: 5%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('flag8.jpg');"></div>
         </div>
-        <p id="bottom_text" style="position: absolute; top: 82%; left: 10%; bottom: 0; width: 100%; max-width: 80%; text-align: center; color: white; opacity: 70%;">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.<br><br>Все права защищены (c) 2024</p>
+        <p id="bottom_text" style="position: absolute; top: 82%; left: 10%; bottom: 0; width: 100%; max-width: 80%; text-align: center; color: white; opacity: 70%;">Among the three archaic symbols — rock, scissors, and paper — lies your chance for triumph. Accept a challenge from the list of offers, choose your warrior, confirm your bet, and enter the battle. Developed on the TON blockchain, game fairness is ensured by a smart contract.<br><br>Playing against the computer is fixed at 0.2 TON.<br><br>tonbingo.com&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;@tonbingo</p>
         <div id="loading_gif" style="position: absolute; transform: translate(-50%, -50%); top: 45%; width: 20%; height: 20%; pointer-events: none; background-position: center; background-repeat: no-repeat; background-size: contain; background-attachment: scroll; background-image: url('loading.gif');"></div>
         <p id="loading_text" style="position: absolute; top: 60%; bottom: 0; width: 100%; max-width: 100%; text-align: center; color: white;">0%</p>
         <div class="loading_logo" id="company_logo"></div>
@@ -200,10 +200,10 @@
       game_logo.style.backgroundImage = "url('title.png')";
 
       // Настраиваем фон полос по бокам
-      document.body.style.backgroundImage = "linear-gradient(#3036a4, #3036a4)";
+      document.body.style.backgroundImage = "linear-gradient(#3b1f40, #3b1f40)";
 
       // Настраиваем фон загрузочного экрана
-      loading_bg.style.backgroundImage = "linear-gradient(#3036a4, #3036a4)";
+      loading_bg.style.backgroundImage = "url('background.png')";
 
       function setLoading(logoPositionTop, logoPositionLeft, logoWidth, logoHeight, positionTop, positionLeft, width, height, barColor, barFillColor, barBorder, barFillBorder, barBorderRadius, barFillBorderRadius, barBackgroundImage, barBackgroundSize) {
         // Указываем размер логотипа
